# plazas

./: .gitignore  .gitignore.txt  Procfile  README.md  Spacefile  app.log.1  app.log.5  app.py  build.sh  datos_plazas.parquet  datos_plazas.xlsx  drive_auto_sync.py  drive_excel_reader.py  excel_tree_auto_sync.py  excel_tree_real.json  exel_scipt.py  permissions.py  render.yaml  requirements.txt
app/: app.py  build_rust.py  comparativas_engine.py  plaza_index.py  plaza_rust-0.5.0-cp312-none-win_amd64.whl  polars_precalc.py  rust_bridge.py  translator.py
app/datos/: coordenadasplazas.json  datos_plazas.parquet  debug  drive_tree.json
plaza_rust/: Cargo.toml
plaza_rust/src/: lib.rs
scripts/: convertidor_plazas.py  coordenadas.py  img_drive.py
static/: comparativas.js  main.js  mapa.css  mapa.js  plaza-details.css  rank.js  sty.css
static/css/: comparativas.css  mapa.css  plaza-details.css  rank.css  sty.css
static/js/: busqueda.js  comparativas.js  estadisticas.js  imageindex.js  imagemodal.js  main.js  mapa.js  rank.js  renderizado.js  utils.js
templates/: ejecutiva.html  index.html  inicio.html
